--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,48 +10,62 @@
     "import pickle\n",
     "\n",
     "perturbation=\"0.1\"\n",
+    "sg=\"0.012589254117941675\"\n",
     "\n",
-    "with open(f\"results/sg_0.01_pert_{perturbation}_nruns_10.pkl\", \"rb\") as f:\n",
+    "with open(f\"results/sg_{sg}_pert_{perturbation}_nruns_10.pkl\", \"rb\") as f:\n",
     "    results = pickle.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key = (\"DDM\", \"{'drift_threshold': 5, 'warm_start': 5000}\")\n",
-    "y_true, y_pred = results[key][\"y_true\"], results[key][\"y_pred\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.55\n",
-      "0.18181818181818182\n"
+      "20 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = [ k for k in results if k[0] == \"DDM\"][0]\n",
+    "y_true, y_pred = results[key][\"y_true\"], results[key][\"y_pred\"]\n",
+    "print(len(y_true), len(y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best threshold 1.0\n",
+      "0.65\n",
+      "0.46153846153846156\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
+    "from sklearn.metrics import roc_curve\n",
+    "import numpy as np\n",
+    "\n",
+    "fpr, tpr, thresh = roc_curve(y_true, y_pred)\n",
+    "best_thresh = thresh[np.argmax(tpr - fpr)]\n",
+    "\n",
+    "print(\"best threshold\", best_thresh)\n",
+    "\n",
+    "y_pred = (y_pred >= best_thresh).astype(int)\n",
+    "\n",
     "print(accuracy_score(y_true, y_pred))\n",
     "print(f1_score(y_true, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
