--- a/drift-viz.ipynb
+++ b/drift-viz.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from drift_agrawal import SubgroupDriftAgrawal\n",
+    "from drift_agrawal import SubgroupAgrawalDrift\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -27,7 +27,7 @@
     "batch_size = 5_000\n",
     "test_batches=200\n",
     "\n",
-    "ds = SubgroupDriftAgrawal(sg_size=0.02,\n",
+    "ds = SubgroupAgrawalDrift(sg_size=0.02,\n",
     "                          perturbation=0.1,\n",
     "                          position=train_size + (test_batches // 2) * batch_size,\n",
     "                          width = (test_batches // 4) * batch_size)"
